--- a/labs/lab02_apis.ipynb
+++ b/labs/lab02_apis.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "---\n",
         "title: \"Lab 2: Data Acquisition & APIs\"\n",
-        "subtitle: \"Build a minimal, reliable pipeline\"\n",
+        "subtitle: \"Build a Reliable Pipeline with Free APIs (Colab Version)\"\n",
         "format:\n",
         "  html:\n",
         "    toc: false\n",
@@ -18,13 +18,20 @@
         "---\n",
         "\n",
         "::: callout-note\n",
-        "### Expected Time\n",
-        "- FIN510: Seminar hands‑on ≈ 60 min; \n",
-        "- Directed learning extensions ≈ 90–120 min\n",
+        "### Lab Versions\n",
+        "This is the **Colab version** using free APIs (yfinance). For Bloomberg Terminal access in the Financial Innovation Lab, see [Lab 2: Bloomberg Version](lab02_bloomberg.qmd).\n",
+        "\n",
+        "**Expected Time:**\n",
+        "- FIN510: Seminar hands‑on ≈ 60 min; Directed learning ≈ 90–120 min\n",
         "- FIN720: Computer lab ≈ 120 min\n",
         ":::\n",
         "\n",
         "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/quinfer/fin510-colab-notebooks/blob/main/labs/lab02_apis.ipynb)\n",
+        "\n",
+        "::: callout-tip\n",
+        "### Bloomberg Terminal Access\n",
+        "Ulster students have access to ~20 Bloomberg terminals in the Financial Innovation Lab. If you're interested in comparing professional-grade data with free APIs, check out the [Bloomberg Terminal version of this lab](lab02_bloomberg.qmd).\n",
+        ":::\n",
         "\n",
         "## Setup (Colab‑only installs)"
       ]
